--- a/index.html
+++ b/index.html
@@ -5,17 +5,28 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="styles.css">
   <title>Frontend Mentor | QR code component</title>
-
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Afacad+Flux:wght@100..1000&family=Outfit:wght@100..900&display=swap');
+    </style>
+    
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+    .attribution { font-size: 11px; text-align: center; padding: 40px; }
+    .attribution a { color: hsl(228, 45%, 44%); text-decoration:none; }
   </style>
 </head>
 <body>
-  <div name >
+  <div class="card" >
+
+      <img src="images/image-qr-code.png" alt="qr-image">
+  
+      <div class="card-title">
+           <h3>Improve your front-end skills by building projects</h3>
+           <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+      </div>
+  </div>
     
   </div>
   <div class="attribution">
