--- a/index.html
+++ b/index.html
@@ -18,20 +18,23 @@
   </style>
 </head>
 <body>
+  <main>
   <div class="card" >
 
-      <img src="images/image-qr-code.png" alt="qr-image">
-  
+      <img src="images/image-qr-code.png" alt="QR code for frontend mentor website">
+
       <div class="card-title">
            <h3>Improve your front-end skills by building projects</h3>
            <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
       </div>
   </div>
-    
+  </main>
+  <footer>
   </div>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Khushi Mhasange</a>.
   </div>
+  </footer>
 </body>
 </html>
